@@ -1,10 +1,17 @@
 package com.codeit.team2.monew.module.domain.article.batch;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 
+import com.codeit.team2.monew.module.domain.article.dto.ArticleInterestCreateCommand;
 import com.codeit.team2.monew.module.domain.article.entity.Article;
+import com.codeit.team2.monew.module.domain.article.repository.ArticleInterestRepository;
 import com.codeit.team2.monew.module.domain.article.repository.ArticleRepository;
+import com.codeit.team2.monew.module.domain.interest.entity.Interest;
 import java.time.Instant;
+import java.util.Collections;
+
 import java.util.List;
 import java.util.Set;
 import org.assertj.core.api.Assertions;
@@ -21,29 +28,54 @@ public class BatchArticleWriterTest {
 
     @Mock
     private ArticleRepository articleRepository;
-
+    @Mock
+    private ArticleInterestRepository articleInterestRepository;
     private BatchArticleWriter writer;
 
     @BeforeEach
     void setup() {
-        writer = new BatchArticleWriter(articleRepository);
+        writer = new BatchArticleWriter(articleRepository, articleInterestRepository);
     }
 
 
     @Test
     void testWriteToRepository_success() throws Exception {
         //given
-        List<Article> articles1 = List.of(
-            new Article("a", "a", "a", "a", Set.of(), 0, Instant.now(), false),
-            new Article("b", "b", "b", "b", Set.of(), 0, Instant.now(), false)
+
+
+
+        Article a = new Article("a", "a", "a", "a", Collections.emptySet(), 0, Instant.now(),
+            false);
+        Article b = new Article("b", "b", "b", "b", Collections.emptySet(), 0, Instant.now(),
+            false);
+        Interest i1 = new Interest("a", 0, List.of(), List.of());
+        Interest i2 = new Interest("b", 0, List.of(), List.of());
+
+        List<ArticleInterestCreateCommand> cmd1 = List.of(
+            new ArticleInterestCreateCommand(
+                a,
+                i1
+            )
         );
 
-        List<Article> articles2 = List.of(
-            new Article("c", "c", "c", "c", Set.of(), 0, Instant.now(), false),
-            new Article("d", "d", "d", "d", Set.of(), 0, Instant.now(), false)
+        List<ArticleInterestCreateCommand> cmd2 = List.of(
+            new ArticleInterestCreateCommand(
+                b,
+                i2
+            )
         );
 
-        Chunk<List<Article>> combined = new Chunk(List.of(articles1, articles2));
+        Chunk<List<ArticleInterestCreateCommand>> combined = new Chunk(List.of(cmd1, cmd2));
+
+        given(articleRepository.findAllBySourceUrlIn(any()))
+            .willReturn(List.of());
+        given(articleRepository.saveAll(any()))
+            .willReturn(List.of(a, b));
+        given(articleInterestRepository.existsByArticleAndInterest(any(), any()))
+            .willReturn(false);
+
+        given(articleInterestRepository.saveAll(any()))
+            .willReturn(Collections.emptyList());
 
         //when
         writer.write(combined);
@@ -54,6 +86,7 @@ public class BatchArticleWriterTest {
         then(articleRepository).should().saveAll(captor.capture());
 
         List<Article> flatList = captor.getValue();
-        Assertions.assertThat(flatList).hasSize(4);
+        Assertions.assertThat(flatList).hasSize(2);
+
     }
 }
